# jocc

./: CMakeLists.txt  LICENSE.txt  README.md  example.joc
common/: alloc.h  astlst.h  astman.h  decode_utf8.h  diagnostic.h  hash.h  lexer.h  prelude.h  preprocessor.h  srcman.h  strman.h  syncat.h  tgroup.h  tmp_stack.h
jocc/: jocc.c
